--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-      <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>  
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
       <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-      <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <link rel="icon" href="assets/images/icon.jpg">
       <link rel="stylesheet" href="assets/css/style.css">
       <title>GYM CITY | Home</title>
@@ -104,7 +100,7 @@
                <div class="row ">
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
                      <div class="team-card card">
-                        <img src="assets/images/mark-pt.jpg" alt="Mark" style="width:100%">
+                        <img src="assets/images/mark-pt.jpg" alt="Mark" class="widths">
                         <h1>Mark <br> Hughes</h1>
                         <p class="title">Manager GYM CITY <br> London</p>
                         <p>Hey! I'm Mark manager of Gym City London</p>
@@ -113,7 +109,7 @@
                   </div>
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
                      <div class="team-card card">
-                        <img src="assets/images/emily-pt.jpg" alt="Emily" style="width:100%">
+                        <img class="widths" src="assets/images/emily-pt.jpg" alt="Emily">
                         <h1>Emily <br> James</h1>
                         <p class="title">Manager GYM CITY <br> Newcastle</p>
                         <p>Hey! I'm Emily manager of Gym City Newcastle</p>
@@ -122,10 +118,10 @@
                   </div>
                   <div class="col-md-4 padding-0 d-flex align-items-stretch">
                      <div class="team-card card">
-                        <img src="assets/images/carlos-pt.jpg" alt="Carlos" style="width:100%">
-                        <h1>Carlos <br> Vargas</h1>
+                        <img src="assets/images/carlos-pt.jpg" alt="Juan" class="widths">
+                        <h1>Juan <br>Vargas</h1>
                         <p class="title">Manager GYM CITY <br> Manchester</p>
-                        <p>Hey! I'm Carlos manager of Gym City Manchester</p>
+                        <p>Hey! I'm Juan manager of Gym City Manchester</p>
                         <p><button onclick="window.location.href='sign-up.html';">Contact</button></p>
                      </div>
                   </div>
@@ -347,5 +343,9 @@
          </ul>
       </footer>
       <!--End-->
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>  
+      <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    </body>
 </html>
