--- a/locations.html
+++ b/locations.html
@@ -5,9 +5,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-      <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
       <link href="css/hover.css" rel="stylesheet" media="all">
       <link rel="stylesheet" href="assets/css/style.css">
@@ -106,7 +103,7 @@
                      <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
                   </div>
                </div>
-               <img src="assets/images/londongym.jpg" class="gympics" alt="London Gym" style="height:100%">
+               <img src="assets/images/londongym.jpg" class="heights gympics" alt="London Gym" >
                <div class="container">
                   <h1 class="location-title">Newcastle</h1>
                </div>
@@ -131,7 +128,7 @@
                      <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
                   </div>
                </div>
-               <img src="assets/images/newcastlegym.jpg" class="gympics" alt="Newcastle Gym">
+               <img src="assets/images/newcastlegym.jpg" class="heights gympics" alt="Newcastle Gym">
                <div class="container" style="height:100%">
                   <h1 class="location-title">Manchester</h1>
                </div>
@@ -156,7 +153,7 @@
                      <div class="gmap_canvas"><iframe width="400" height="400"  src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed"  ></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div>
                   </div>
                </div>
-               <img src="assets/images/manchestergym.jpg" class="gympics" alt="Manchester Gym" style="height:100%">
+               <img src="assets/images/manchestergym.jpg" class="heights gympics" alt="Manchester Gym">
             </div>
          </div>
       </section>
@@ -188,5 +185,8 @@
          </ul>
       </footer>
       <!--End-->
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    </body>
 </html>
